--- a/A20 Ex04 Daniel 203105572 Dor 206318537/A20 Ex04 Daniel 203105572 Dor 206318537.csproj
+++ b/A20 Ex04 Daniel 203105572 Dor 206318537/A20 Ex04 Daniel 203105572 Dor 206318537.csproj
@@ -52,11 +52,12 @@
     <Compile Include="Interfaces\IRandomBehavior.cs" />
     <Compile Include="Managers\CameraManager.cs" />
     <Compile Include="Managers\InputManager.cs" />
-    <Compile Include="Models\DradleSpin.cs" />
-    <Compile Include="Models\Letter3D.cs" />
+    <Compile Include="Models\Dreidel.cs" />
+    <Compile Include="Models\Composite3D.cs" />
     <Compile Include="Models\Model3D.cs" />
     <Compile Include="Models\Box.cs" />
     <Compile Include="Models\Object3D.cs" />
+    <Compile Include="Models\Pyramid.cs" />
     <Compile Include="Models\Rectangle3D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
