Added more dreidels to the game. Started GameManager

--- a/A20 Ex04 Daniel 203105572 Dor 206318537/A20 Ex04 Daniel 203105572 Dor 206318537.csproj
+++ b/A20 Ex04 Daniel 203105572 Dor 206318537/A20 Ex04 Daniel 203105572 Dor 206318537.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Interfaces\IInputManager.cs" />
     <Compile Include="Interfaces\IRandomBehavior.cs" />
     <Compile Include="Managers\CameraManager.cs" />
+    <Compile Include="Managers\GameManager.cs" />
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Models\Dreidel.cs" />
     <Compile Include="Models\Composite3D.cs" />
