Added GameManager logic, Seperated every model logic to color and texture. Added dreidel texture to content.

--- a/A20 Ex04 Daniel 203105572 Dor 206318537/A20 Ex04 Daniel 203105572 Dor 206318537.csproj
+++ b/A20 Ex04 Daniel 203105572 Dor 206318537/A20 Ex04 Daniel 203105572 Dor 206318537.csproj
@@ -54,10 +54,12 @@
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Models\Dreidel.cs" />
     <Compile Include="Models\Composite3D.cs" />
-    <Compile Include="Models\Box.cs" />
+    <Compile Include="Models\ColorBox.cs" />
     <Compile Include="Models\Object3D.cs" />
     <Compile Include="Models\Pyramid.cs" />
     <Compile Include="Models\Rectangle3D.cs" />
+    <Compile Include="Models\TextureBox.cs" />
+    <Compile Include="Models\TextureDreidel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseGame.cs" />
